2008-08-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoUserFolder+Appointments.m
	([SOGoUserFolder -davCalendarUserAddressSet]): the addresses
	returned should be those of the owner and not of the current user.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject +webdavAclManager]): declare DAV:write as
	equivalent of ..._ModifyComponent (instead of DAV:write-content).

2008-08-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor -isNew]):
	invoke "isNew" to the client object only if it is an instance of
	SOGoContentObject...

2008-08-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -calendar:create:secure]): we now return a
	deep copy of the current calendar element, so that further
	modifications do not impact the original copy.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +initialize]): same as
	below.

	* Main/SOGo.m ([SOGo -run]): rename AgenorProfileURL to
	SOGoProfileURL automagically.

2008-07-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalListingActions.m ([UIxCalListingActions
	-eventsBlocksAction]): return event blocks with the serial number
	of the event they refer to in the events list (first array) rather
	than their cname, so that specific occurences can be
	differenciated.

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-davUserQuery:queryContext]): make searches only in user
	repositories and not in addressbooks.

2008-07-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalMonthView.m ([UIxCalMonthView
	-weeksToDisplay]): add one day to the computed delta, because
	there is always at least one week displayed.

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-foldersOfType:typematchingUID:uid]): make searches only in user
	repositories and not in addressbooks.

	* SoObjects/SOGo/LDAPUserManager.m ([LDAPUserManager