@@ -1,5 +1,11 @@
 2008-08-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/SOGo/LDAPUserManager.m ([LDAPUserManager
+	-fetchContactsMatching:filter]): fetch entries matching filter
+	only in addressbooks.
+	([LDAPUserManager -fetchUsersMatching:filter]): same as above for
+	authentication sources only.
+
 	* SoObjects/Appointments/SOGoUserFolder+Appointments.m
 	([SOGoUserFolder -davCalendarUserAddressSet]): the addresses
 	returned should be those of the owner and not of the current user.
